Bug 252133 - Incremental search not implemented in Serverside subscription dialogue
Summary: Incremental search not implemented in Serverside subscription dialogue
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-23 14:35 UTC by Sabine Faure
Modified: 2010-09-29 23:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-23 14:35:22 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The incremental search (typing a letter scrolls down automatically to folder name starting by that letter) is not implemented in the 'Serverside Subscription' dialogue atm.
Since the dialogue has been completely redone and the search field could not be kept I think it would be a great idea to implement an incremental search in that dialogue to make it more user friendly and more efficient to use.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on your Imap account
- Open the 'Actions' tab
- Click on 'Account'
- Click on 'Edit account'
- Check the ' Enable Server-Side Subscriptions' check box
- Click on 'Serverside Subscription...' button
- Try to type an 's' so that the dialogue scrolls down automatically to folder names starting by 's' (example: shared folders)


Actual Results:  
Nothing happens. It seems that the incremental search is not implemented atm.

Expected Results:  
The dialogue should scroll down to folder names starting with 's'.

N900, 4:4.5~20100922.1178352-1maemo1.1177763
Comment 1 Kevin Ottens 2010-09-27 17:18:25 UTC
SVN commit 1180299 by ervin:

Reintroduce the filter line edit even in mobile mode. Still keep it
hidden by default. When the user types something is appears, when it's
emptied it disappears again.

BUG: 252133



 M  +53 -10    subscriptiondialog.cpp  
 M  +7 -0      subscriptiondialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180299
Comment 2 Sabine Faure 2010-09-29 23:18:56 UTC
It is corrected now.

When opening the 'Serverside Subscription' dialogue if the user types a letter then a search line edit appears to filter directly to folders starting by that letter.

If the user clicks on the 'X' at the end of the search line edit it disappear allowing him to scroll directly to the wanted folder so it is not invasive.


N900, 4:4.5~20100929.1180953-1maemo1.1180919