Reintroduce the filter line edit even in mobile mode. Still keep it hidden by default. When the user types something is appears, when it's emptied it disappears again.

BUG: 252133


svn path=/trunk/KDE/kdepim/runtime/; revision=1180299